# streamvc-pytorch

./: .gitignore  LICENSE  pyproject.toml
src/streamvc/datasets/: __init__.py  audio_feat_dataset.py  collator.py
src/streamvc/features/: fixed.py
src/streamvc/features/f0_utils/: __init__.py  extractor.py  modules.py
src/streamvc/losses/: __init__.py  adv.py  fml.py  mel.py  reg.py
src/streamvc/models/: __init__.py
src/streamvc/models/decoder/: hifigan.py  seanet.py
src/streamvc/models/discriminator/: __init__.py  hifigan.py  ms_stft_discriminator.py  univnet.py
src/streamvc/models/encoder/: hubert.py  seanet.py
src/streamvc/models/postnet/: __init__.py
src/streamvc/modules/: film.py  snake_activation.py  yin.py
src/streamvc/utils/: audio_io.py  file_io.py  filter.py  fixed.py  trainer.py  utils.py
