[project]
name = "streamvc"
version = "0.1.0"
description = "Unofficial implementation of StreamVC"
authors = [
    { name = "Sumiharu Kobayashi", email = "kobayashi.sumiharu@dc.r4.tohoku.ac.jp" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.0",
    "openai-whisper>=20250625",
    "peft>=0.19.1",
    "s3prl>=0.4.18",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch==2.11.0+cu130; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.11.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "torch-yin>=0.1.3",
    "torchaudio==2.11.0+cu130; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio==2.11.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wespeaker>=0.0.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "jupyter-console>=6.6.3",
    "nbclassic>=1.3.1",
    "notebook>=7.4.3",
    "torchinfo>=1.8.0",
]

[project.scripts]
streamvc-train-kmean = "streamvc.bin.train_kmean:main"
streamvc-preprocess = "streamvc.bin.preprocess:main"
streamvc-train-encoder = "streamvc.bin.train_encoder:main"
streamvc-train-decoder = "streamvc.bin.train_decoder:main"
# streamvc-anasyn = "streamvc.bin.anasyn:main"
streamvc-decode = "streamvc.bin.decode:main"
# streamvc-extract-features = "streamvc.bin.extract_features:main"
#
# [tool.setuptools.packages.find]
# where = ["src/"]
# include = ["streamvc"]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')" },
]
torchaudio = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')" },
]
pyworld = { git = "https://github.com/JeremyCCHsu/Python-Wrapper-for-World-Vocoder.git" }
fairseq = { git = "https://github.com/liyaodev/fairseq.git" }
wespeaker = { git = "https://github.com/misumisumi/wespeaker.git", branch = "fix/dependics" }
s3prl = { git = "https://github.com/misumisumi/s3prl.git", branch = "deprecated/backend" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamvc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.typos.default.extend-words]
fo = "fo"
